--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
         <title>tikrit</title>
     </head>
     <body>
+        <div id="canvas-div">
         <canvas id="c1"></canvas>
-        <script src="main.js"></script>
+    </div>
     </body>
+        <script src="main.js"></script>
 </html>
